kubernetes/components/gitops-controller/base/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: argocd-server
  namespace: gitops-controller
  annotations:
    external-dns.alpha.kubernetes.io/target: udm-pro.zimmermann.sh
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`PLACEHOLDER`)
      priority: 10
 #     middlewares:
 #       - name: chain-mfa-auth
 #         namespace: ingress-controller
      services:
        - kind: Service
          name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`PLACEHOLDER`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
 #     middlewares:
 #       - name: chain-mfa-auth
 #         namespace: ingress-controller
      services:
        - kind: Service
          name: argocd-server
          port: 80
          scheme: h2c
  tls:
    secretName: argocd-tls-cert
